--- a/index.html
+++ b/index.html
@@ -1,15 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Contactos Webex</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    h2 { color: #333; }
+    input[type="text"] {
+      width: 300px;
+      padding: 8px;
+      margin-bottom: 15px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
+
   <h2>Lista de Contactos</h2>
-  <table border="1">
-    <tr><th>Nombre</th><th>Teléfono</th><th>Correo</th></tr>
-    <tr><td>Ana López</td><td>555-1234</td><td>ana@example.com</td></tr>
-    <tr><td>Carlos Ruiz</td><td>555-5678</td><td>carlos@example.com</td></tr>
-    <tr><td>María Pérez</td><td>555-9876</td><td>maria@example.com</td></tr>
+
+  <input type="text" id="searchInput" placeholder="Buscar por nombre, extensión o área...">
+
+  <table id="contactTable">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Teléfono</th>
+        <th>Extensión</th>
+        <th>Área</th>
+        <th>Correo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Ana López</td>
+        <td>555-1234</td>
+        <td>1001</td>
+        <td>Ventas</td>
+        <td>ana@example.com</td>
+      </tr>
+      <tr>
+        <td>Carlos Ruiz</td>
+        <td>555-5678</td>
+        <td>1002</td>
+        <td>Soporte</td>
+        <td>carlos@example.com</td>
+      </tr>
+      <tr>
+        <td>María Pérez</td>
+        <td>555-9876</td>
+        <td>1003</td>
+        <td>Administración</td>
+        <td>maria@example.com</td>
+      </tr>
+    </tbody>
   </table>
+
+  <script>
+    const input = document.getElementById("searchInput");
+    input.addEventListener("keyup", function () {
+      const filter = input.value.toLowerCase();
+      const rows = document.querySelectorAll("#contactTable tbody tr");
+
+      rows.forEach(row => {
+        const text = row.textContent.toLowerCase();
+        row.style.display = text.includes(filter) ? "" : "none";
+      });
+    });
+  </script>
+
 </body>
 </html>
