--- a/index.html
+++ b/index.html
@@ -34,34 +34,22 @@
   <table id="contactTable">
     <thead>
       <tr>
-        <th>Nombre</th>
+        <th>Agencia</th>
         <th>Teléfono</th>
-        <th>Extensión</th>
-        <th>Área</th>
-        <th>Correo</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Ana López</td>
-        <td>555-1234</td>
-        <td>1001</td>
-        <td>Ventas</td>
-        <td>ana@example.com</td>
+        <td>BancoMatico</td>
+        <td>24203000</td>
       </tr>
       <tr>
         <td>Carlos Ruiz</td>
-        <td>555-5678</td>
-        <td>1002</td>
-        <td>Soporte</td>
-        <td>carlos@example.com</td>
+        <td>5555678</td>
       </tr>
       <tr>
         <td>María Pérez</td>
-        <td>555-9876</td>
-        <td>1003</td>
-        <td>Administración</td>
-        <td>maria@example.com</td>
+        <td>5559876</td>
       </tr>
     </tbody>
   </table>
