--- a/index.html
+++ b/index.html
@@ -4,52 +4,88 @@
   <meta charset="UTF-8">
   <title>Contactos Webex</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    h2 { color: #333; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview');
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+    }
+
+    h2 {
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    .search-box {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+
     input[type="text"] {
       width: 300px;
-      padding: 8px;
-      margin-bottom: 15px;
+      padding: 10px;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
     }
+
     table {
-      border-collapse: collapse;
       width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      border-collapse: collapse;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
+      overflow: hidden;
     }
+
     th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
+      padding: 12px;
       text-align: left;
+      color: #fff;
     }
+
     th {
-      background-color: #f2f2f2;
+      background-color: rgba(0, 0, 0, 0.7);
+      font-weight: bold;
+    }
+
+    tr:nth-child(even) {
+      background-color: rgba(255, 255, 255, 0.05);
     }
   </style>
 </head>
 <body>
 
-  <h2>Lista de Contactos</h2>
+  <h2>Contactos Webex</h2>
 
-  <input type="text" id="searchInput" placeholder="Buscar por nombre, extensión o área...">
+  <div class="search-box">
+    <input type="text" id="searchInput" placeholder="Buscar por nombre o teléfono...">
+  </div>
 
   <table id="contactTable">
     <thead>
       <tr>
-        <th>Agencia</th>
+        <th>Nombre</th>
         <th>Teléfono</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>BancoMatico</td>
-        <td>24203000</td>
+        <td>Ana López</td>
+        <td>555-1234</td>
       </tr>
       <tr>
         <td>Carlos Ruiz</td>
-        <td>5555678</td>
+        <td>555-5678</td>
       </tr>
       <tr>
         <td>María Pérez</td>
-        <td>5559876</td>
+        <td>555-9876</td>
       </tr>
     </tbody>
   </table>
@@ -67,7 +103,5 @@
     });
   </script>
 
-</body>
-</html>
 </body>
 </html>
