--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       font-family: Arial, sans-serif;
       padding: 40px;
       background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview');
-      background-size: cover;
-      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center top;
       color: #fff;
     }
 
