--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Contactos Webex</title>
+  <title>Contactos Agencias</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 40px;
-      background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview');
+      background-color: #f5f5f5;
+      background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview'); 
       background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center top;
-      color: #fff;
+      background-position: center center;
+      background-size: 300px;
+      opacity: 1;
     }
 
     h2 {
       text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 2px #000;
+      color: #222;
     }
 
     .search-box {
@@ -29,67 +29,73 @@
     input[type="text"] {
       width: 300px;
       padding: 10px;
-      border: none;
+      border: 1px solid #aaa;
       border-radius: 6px;
       font-size: 16px;
     }
 
+    .table-container {
+      max-width: 500px;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    }
+
     table {
       width: 100%;
-      max-width: 600px;
-      margin: 0 auto;
       border-collapse: collapse;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 10px;
-      overflow: hidden;
     }
 
     th, td {
       padding: 12px;
       text-align: left;
-      color: #fff;
+      color: #333;
     }
 
     th {
-      background-color: rgba(0, 0, 0, 0.7);
-      font-weight: bold;
+      background-color: #0066cc;
+      color: #fff;
     }
 
     tr:nth-child(even) {
-      background-color: rgba(255, 255, 255, 0.05);
+      background-color: #f0f0f0;
     }
   </style>
 </head>
 <body>
 
-  <h2>Contactos Webex</h2>
+  <h2>Contactos Agencias</h2>
 
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar por nombre o teléfono...">
   </div>
 
-  <table id="contactTable">
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>Teléfono</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Ana López</td>
-        <td>555-1234</td>
-      </tr>
-      <tr>
-        <td>Carlos Ruiz</td>
-        <td>555-5678</td>
-      </tr>
-      <tr>
-        <td>María Pérez</td>
-        <td>555-9876</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-container">
+    <table id="contactTable">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Teléfono</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Ana López</td>
+          <td>555-1234</td>
+        </tr>
+        <tr>
+          <td>Carlos Ruiz</td>
+          <td>555-5678</td>
+        </tr>
+        <tr>
+          <td>María Pérez</td>
+          <td>555-9876</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <script>
     const input = document.getElementById("searchInput");
