--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Contactos Agencias</title>
+  <title>Contactos Webex</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 40px;
       background-color: #f5f5f5;
-      background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview'); 
+      background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview');
       background-repeat: no-repeat;
       background-position: center center;
-      background-size: 200px;
-      opacity: 1;
+      background-size: 300px;
     }
 
     h2 {
@@ -66,7 +65,7 @@
 </head>
 <body>
 
-  <h2>Contactos Agencias</h2>
+  <h2>Contactos Webex</h2>
 
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar por nombre o teléfono...">
@@ -80,25 +79,31 @@
           <th>Teléfono</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td>Ana López</td>
-          <td>555-1234</td>
-        </tr>
-        <tr>
-          <td>Carlos Ruiz</td>
-          <td>555-5678</td>
-        </tr>
-        <tr>
-          <td>María Pérez</td>
-          <td>555-9876</td>
-        </tr>
+      <tbody id="contactBody">
+        <!-- Aquí se insertan automáticamente las filas -->
       </tbody>
     </table>
   </div>
 
   <script>
     const input = document.getElementById("searchInput");
+
+    // Cargar contactos desde el archivo JSON
+    fetch('contactos.json')
+      .then(response => response.json())
+      .then(data => {
+        const tbody = document.getElementById("contactBody");
+        data.forEach(contacto => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${contacto.nombre}</td>
+            <td>${contacto.telefono}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+      });
+
+    // Filtro de búsqueda
     input.addEventListener("keyup", function () {
       const filter = input.value.toLowerCase();
       const rows = document.querySelectorAll("#contactTable tbody tr");
