--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Contactos Webex</title>
+  <title>Directorio Agencias</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-  <h2>Contactos Webex</h2>
+  <h2>Directorio Agencias</h2>
 
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar por nombre o teléfono...">
