--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       background-color: #f5f5f5;
       background-image: url('https://biupload.bi.com.gt/s/Sj5oMbc4FDEaCBo/preview');
       background-repeat: no-repeat;
-      background-position: center center;
-      background-size: 300px;
+      background-position: top left;
+      background-size: 150px;
+      background-attachment: fixed;
     }
 
     h2 {
