--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
     .table-container {
       max-width: 500px;
-      margin: 0 auto;
+      margin-left: 40px;
+      margin: auto;
       background-color: rgba(255, 255, 255, 0.9);
       padding: 20px;
       border-radius: 10px;
